--- a/portfolio.html
+++ b/portfolio.html
@@ -258,11 +258,18 @@
                   </svg>
                 </a>
               </li></ul>
-            
-  </div>
+            </div>
+  <div class="footer-email">
+  <p class="footer-invite">Подпишитесь на рассылку</p>
+  <form>
+    <input type="email" name="user-email"       placeholder="E-mail"class="footer-email-field">
+  </form>
 </div>
-      
-    </div>
+<div class="subscribe-button-container">
+  <button type="button" class="subscribe-button"><span>Подписаться</span><svg class="subscribe-icon" width="24" height="24"><use href="./images/symbol-defs.svg#icon-icon-send"></use></svg></button>
+</div>
+</div>
+</div>
     </footer>
   </body>
 </html>
